--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-shell-command:
-    enviroment: test 
+    environment: test 
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
