--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -18,3 +18,12 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  run-windows-commands:
+    environment: test
+    runs-on: windows-latest
+    steps:
+      - name: Directory Powershell
+        run: Get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
