--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -21,6 +21,7 @@ jobs:
   run-windows-commands:
     environment: test
     runs-on: windows-latest
+    needs: ["run-shell-commands"]
     steps:
       - name: Directory Powershell
         run: Get-Location
