--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,9 @@
 name: Actions Workflows
 
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+    types: [closed, opened, assigned, reopened]
 
 jobs: 
   run-github-actions:
