--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,6 +4,17 @@ env:
   WF_ENV: Available to all jobs
 
 jobs:
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Decrypt file
+        run: gpg --quiet  --batch --yes --passphrase="PASSPHRASE" --output $HOME/secret.json secret.json.gpg
+        env:
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+      - name: Print our file content
+        run: cat $HOME/secret.json
+
   log-env:
     runs-on: ubuntu-latest
     env:
